--- a/index.html
+++ b/index.html
@@ -213,11 +213,14 @@
                     <div class="info-header mb-5">
                       <div class="card-header">
                         <!-- CARD HEADER ------------------------------>
-                        <div class="d-flex align-items-start justify-content-around">
+                        <div class="row">
+                          <div class="col-md-6 col-12">
                         <h3 class="text-primary pb-3">
                           Crypto Currency Leaderboard
                         </h3>
-                        <div class="input-group mb-3 w-50 shadow">
+                      </div>
+                      <div class="col-md-6 col-12">
+                        <div class="input-group mb-3 w-100 shadow">
                           <input
                             id="searchBox"
                             class="form-control"
@@ -230,6 +233,7 @@
                             ></span>
                           </div>
                         </div>
+                      </div>
                         <!-- CARD HEADER ------------------------------>
                       </div>
                       <div class="col-3"></div>
