--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                 </div>
                 -->
             <!-- CRYPTO CURRENCY LEADERBOARD -->
-            <div class="container">
-              <div id="mainContainer" class="card shadow">
+            <div class="container px-0 px-md-2">
+              <div id="mainContainer" class="card shadow ">
                 <div class="row">
                   <div class="col text-center">
                     <div class="info-header mb-5">
@@ -258,7 +258,7 @@
                   </div>
                 </div>
               </div>
-              <div class="overflow-scroll card-body" id="cryptoContainer">
+              <div class="overflow-scroll card-body px-1 px-md-3 " id="cryptoContainer">
                 <div id="row" class="row"></div>
               </div>
             </div>
