--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
                     ></a>
                   </div>
                   <div class="card-body p-1">
+                    <!-- SPINNER ----------------------------------------- { SPINNER } -->
+                    <div class="d-flex justify-content-center">
+                    <img class="spinner-el" id="spinner" src="../assets/spinner.gif" alt="">
+                  </div>
                     <table
                       id="gLModal"
                       class="table table-borderless table-hover"
@@ -111,6 +115,10 @@
                     ></a>
                   </div>
                   <div class="card-body p-1">
+                         <!-- SPINNER ----------------------------------------- { SPINNER } -->
+                    <div class="d-flex justify-content-center">
+                      <img class="spinner-el" id="spinner" src="../assets/spinner.gif" alt="">
+                    </div>
                     <table
                       id="gLModal"
                       class="table table-borderless table-hover"
@@ -131,6 +139,9 @@
                 </div>
                 <!-- Modal Content -->
                 <div class="modal-body">
+                  <div class="d-flex justify-content-center">
+                    <img class="spinner-modal" id="spinner-modal" src="../assets/spinner.gif" alt="">
+                  </div>
                   <table class="table table-borderless table-hover">
                     <tbody id="modalTable"></tbody>
                   </table>
@@ -207,6 +218,7 @@
                 -->
             <!-- CRYPTO CURRENCY LEADERBOARD -->
             <div class="container px-0 px-md-2">
+             
               <div id="mainContainer" class="card shadow ">
                 <div class="row">
                   <div class="col text-center">
@@ -259,6 +271,9 @@
                 </div>
               </div>
               <div class="overflow-scroll card-body px-2 px-md-3 " id="cryptoContainer">
+                <div class="d-flex justify-content-center">
+                  <img class="spinner-el spinner-leader" id="spinner" src="../assets/spinner.gif" alt="">
+                </div>
                 <div id="row" class="row"></div>
               </div>
             </div>
