--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -70,6 +70,14 @@
           </div>
           <div class="card-body">
             <div class="overflow-scroll card-body" id="cryptoContainer">
+              <div class="d-flex justify-content-center">
+                <img
+                  class="spinner-watchlist"
+                  id="spinner-watchlist"
+                  src="../../assets/spinner.gif"
+                  alt=""
+                />
+              </div>
               <div id="row" class="row"></div>
             </div>
           </div>
