--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -74,7 +74,7 @@
                 <img
                   class="spinner-watchlist"
                   id="spinner-watchlist"
-                  src="../../assets/spinner.gif"
+                  src="../../CryptoStats/assets/spinner.gif"
                   alt=""
                 />
               </div>
