--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <div class="card-body p-1">
                     <!-- SPINNER ----------------------------------------- { SPINNER } -->
                     <div class="d-flex justify-content-center">
-                    <img class="spinner-el" id="spinner" src="../CryptoStats/assets/spinner.gif" alt="">
+                    <img class="spinner-el" id="spinner" src="./assets/spinner.gif" alt="">
                   </div>
                     <table
                       id="gLModal"
@@ -117,7 +117,7 @@
                   <div class="card-body p-1">
                          <!-- SPINNER ----------------------------------------- { SPINNER } -->
                     <div class="d-flex justify-content-center">
-                      <img class="spinner-el" id="spinner" src="../CryptoStats/assets/spinner.gif" alt="">
+                      <img class="spinner-el" id="spinner" src="./assets/spinner.gif" alt="">
                     </div>
                     <table
                       id="gLModal"
@@ -140,7 +140,7 @@
                 <!-- Modal Content -->
                 <div class="modal-body">
                   <div class="d-flex justify-content-center">
-                    <img class="spinner-modal" id="spinner-modal" src="../CryptoStats/assets/spinner.gif" alt="">
+                    <img class="spinner-modal" id="spinner-modal" src="./assets/spinner.gif" alt="">
                   </div>
                   <table class="table table-borderless table-hover">
                     <tbody id="modalTable"></tbody>
@@ -272,7 +272,7 @@
               </div>
               <div class="overflow-scroll card-body px-2 px-md-3 " id="cryptoContainer">
                 <div class="d-flex justify-content-center">
-                  <img class="spinner-el spinner-leader" id="spinner" src="../CryptoStats/assets/spinner.gif" alt="">
+                  <img class="spinner-el spinner-leader" id="spinner" src="./assets/spinner.gif" alt="">
                 </div>
                 <div id="row" class="row"></div>
               </div>
