Navigation Current Page highlight

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -36,8 +36,8 @@
       >
         <ul class="navbar-nav w-100 d-flex justify-content-around">
           <li class="nav-item d-flex">
-            <i class="d-none d-md-block text-info fa fa-tachometer fa-2x"></i>
-            <a class="nav-link h6 text-info" href="../index.html"
+            <i class=" d-none d-md-block text-muted  fa fa-tachometer fa-2x"></i>
+            <a class=" nav-link h6 " href="../index.html"
               >Dashboard <span class="sr-only">(current)</span></a
             >
           </li>
@@ -47,8 +47,8 @@
           </li>
 
           <li class="nav-item d-flex">
-            <i class="d-none d-md-block text-muted fas fa-wallet fa-2x"></i>
-            <a class="nav-link h6" href="portfolio.html">Portfolio</a>
+            <i class="l1 d-none d-md-block text-muted fas fa-wallet fa-2x"></i>
+            <a class="l1 nav-link h6" href="portfolio.html">Portfolio</a>
           </li>
         </ul>
       </div>
@@ -137,7 +137,7 @@
                   <table id="tableNone" class="d-none border table-hover">
                     <tbody
                       id="searchBoxContainer"
-                      class="position-absolute"
+                      class="position-absolute search_por"
                     ></tbody>
                   </table>
                 </div>
