--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -32,14 +32,16 @@
         >
           <ul class="navbar-nav w-100 d-flex justify-content-around">
             <li class="nav-item d-flex">
-              <i class="d-none d-md-block text-info fa fa-tachometer fa-2x"></i>
-              <a class="nav-link h6 text-info" href="../index.html"
+              <i
+                class="d-none d-md-block text-muted fa fa-tachometer fa-2x"
+              ></i>
+              <a class="nav-link h6text-muted" href="../index.html"
                 >Dashboard <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item d-flex">
-              <i class="d-none d-md-block text-muted far fa-star fa-2x"></i>
-              <a class="nav-link h6" href="watchlist.html">Watchlist</a>
+              <i class="l1 d-none d-md-block text-muted far fa-star fa-2x"></i>
+              <a class="l1 nav-link h6" href="watchlist.html">Watchlist</a>
             </li>
 
             <li class="nav-item d-flex">
